feat: ajustes de componentes utilizando SOLID

--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -15,32 +15,22 @@ input {
   }
 }
 
-.primary input:hover,
-.secondary input:hover {
+.primary:hover,
+.secondary:hover {
   border-color: var(--rosa);
 }
 
-.primary input:focus,
-.secondary input:focus {
+.primary:focus,
+.secondary:focus {
   border-color: var(--rosa);
   outline: none;
 }
 
-.primary input {
+.primary {
   background-color: transparent;
 }
 
-.secondary input {
+.secondary {
   border-color: var(--cinza-claro);
-}
-
-.inputContainer {
-  width: 100%;
-  position: relative;
-}
-
-.iconContainer {
-  position: absolute;
-  top: 20px;
-  right: 40px;
+  background-color: var(--cinza-claro);
 }
